<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#8de9cf"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/welcome"
                android:textSize="30sp" />
        </RelativeLayout>

        <LinearLayout style="@style/questionBox">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="16dp"
            android:background="#000000" />

        <LinearLayout style="@style/questionBox">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1" />

            <EditText
                android:id="@+id/q1_edt"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:inputType="phone" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="16dp"
            android:background="#000000" />

        <LinearLayout style="@style/questionBox">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="80" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="50" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="180" />

                <RadioButton
                    android:id="@+id/q2_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="60" />
            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="16dp"
            android:background="#000000" />

        <LinearLayout style="@style/questionBox">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp">

                <ImageView
                    android:id="@+id/find_c_imv"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/find_c" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/find_c_imv"
                    android:paddingStart="30dp">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10" />

                    <RadioButton
                        android:id="@+id/q3_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="18" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="6" />
                </RadioGroup>
            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="16dp"
            android:background="#000000" />

        <LinearLayout style="@style/questionBox">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4" />

            <EditText
                android:id="@+id/q4_edt"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="16dp"
            android:background="#000000" />

        <LinearLayout style="@style/questionBox">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5" />

            <CheckBox
                android:id="@+id/first_checkbox"
                style="@style/wrapContentStyle"
                android:layout_marginTop="12dp"
                android:text="@string/positive_number"
                android:textColor="#000000" />

            <CheckBox
                android:id="@+id/second_checkbox"
                style="@style/wrapContentStyle"
                android:layout_marginTop="12dp"
                android:text="@string/negative_number"
                android:textColor="#000000" />

            <CheckBox
                android:id="@+id/third_checkbox"
                style="@style/wrapContentStyle"
                android:layout_marginTop="12dp"
                android:text="@string/odd_number"
                android:textColor="#000000" />

            <CheckBox
                android:id="@+id/fourth_checkbox"
                style="@style/wrapContentStyle"
                android:layout_marginTop="12dp"
                android:text="@string/even_number"
                android:textColor="#000000" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="16dp"
            android:background="#000000" />

        <LinearLayout style="@style/questionBox">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q6" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/q6_edt"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="cm\u00B2" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="16dp"
            android:background="#000000" />

        <LinearLayout style="@style/questionBox">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q7" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp">

                <ImageView
                    android:id="@+id/find_unknown_angle"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/triangle_angle" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/find_unknown_angle"
                    android:paddingStart="30dp">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100" />

                    <RadioButton
                        android:id="@+id/q7_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="35" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="60" />
                </RadioGroup>
            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="16dp"
            android:background="#000000" />

        <LinearLayout style="@style/questionBox">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q8" />

            <EditText
                android:id="@+id/q8_pi_edt"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:inputType="phone" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="16dp"
            android:background="#000000" />

        <LinearLayout style="@style/questionBox">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q9" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="180 cm\u00B2" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="500 cm\u00B2" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="180 cm\u00B2" />

                <RadioButton
                    android:id="@+id/q9_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="314 cm\u00B2" />
            </RadioGroup>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="16dp"
            android:background="#000000" />

        <LinearLayout style="@style/questionBox">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q10" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/q10_perimeter_edt"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="cm" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="16dp"
            android:background="#000000" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/score_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="16dp"
                android:background="#8de9cf"
                android:onClick="showScore"
                android:padding="15dp"
                android:text="@string/submit" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
